# codagent

./: .gitignore  README.md  pyproject.toml
src/codagent/: __init__.py  code_exec.py  main.py  parser.py  prompts.py
src/codagent/tools/: create_index.py  create_or_update_code_file.py  get_directory_structure.py  read_source_file.py  update_code_file.py
tests/: test_parse_output.py
