[project]
name = "codagent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Quentin Amirault", email = "amirault.quentin@gmail.com"},
]
dependencies = ["mistralai>=1.5.0", "rich>=13.9.4", "pytest>=8.3.4", "pydantic>=2.10.6"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
