[project]
name = "codagent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Quentin Amirault", email = "amirault.quentin@gmail.com"},
]
dependencies = ["mistralai>=1.5.0", "rich>=13.9.4", "pytest>=8.3.4", "pydantic>=2.10.6", "pymilvus>=2.5.4", "duckduckgo-search>=7.3.2", "markdownify>=0.14.1", "requests>=2.32.3"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
